@@ -2,15 +2,13 @@ package com.cariochi.recordo.books;
 
 import com.cariochi.recordo.books.dto.Author;
 import com.cariochi.recordo.books.dto.Book;
+import java.util.List;
+import java.util.stream.Stream;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 
-import java.util.List;
-import java.util.stream.Stream;
-
 import static java.util.Arrays.asList;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.RandomUtils.nextLong;
 
 public class BookService {
@@ -39,7 +37,7 @@ public class BookService {
     public Page<Book> merge(List<Book> books, Book book) {
         return new PageImpl<>(Stream.concat(books.stream(), Stream.of(book))
                 .sorted(comparing(Book::getTitle))
-                .collect(toList()));
+                .toList());
     }
 
     public Book create(Book book) {
